Fix text-align

--- a/packages/survey-core/src/default-theme/blocks/sd-imagepicker.scss
+++ b/packages/survey-core/src/default-theme/blocks/sd-imagepicker.scss
@@ -134,6 +134,7 @@
 }
 .sd-imagepicker__text {
   white-space: normal;
+  text-align: center;
 }
 
 .sd-imagepicker__column {
